Adds boilerplate for an additional about route

--- a/views/about.html
+++ b/views/about.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home route</title>
+    <title>About route</title>
 
-    <link rel="stylesheet" href="<%= assetsMap.home.css %>">
+    <link rel="stylesheet" href="<%= assetsMap.about.css %>">
 </head>
 <body>
 
     <div class="wrapper">
-        <h1 class="home-heading">Home</h1>
+        <h1 class="about-heading">About</h1>
     </div>
 
     <script
         src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
-    <script src="<%= assetsMap.home.js %>"></script>
+    <script src="<%= assetsMap.about.js %>"></script>
 </body>
 </html>
