--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,56 @@
 <body>
 
     <div class="wrapper">
-        <h1 class="home-heading">Home</h1>
+        <div class="yellowBar"></div>
+        <section class="section section-home-main"></section>
+
+        <section class="section section-home-about">
+            <div class="main-heading">
+                <h1>who<br>we<br>are</h1>
+            </div>
+
+            <div class="section-words">
+                <h1>Who</h1>
+                <p>Specializing in the whole spectrum of branding, we help our clients with existing or new brands build strategic plans, conceptualize and establish an impactful visual identity that reflects the brand's heart and soul. Our projects cover a large variety of industries, some of which include real estate property management / developers, fashion, pharmaceuticals, jewelry showcase designs, co-working spaces, retail sourcing agencies and more.</p>
+            </div>
+
+            <div class="section-words">
+                <h1>Wesuperseed community</h1>
+                <p>WeSuperseed is a community of likeminded, multi-cultrual, innovative, passionate creators at heart aiming to use innovation and divergent creativity to alter and inspire minds. At WeSuperseed, we're always looking for creative minds to join us. We're aiming to grow a platform of creative thinkers that may be looking for work or that need assistance with their projects on hand.</p>
+            </div>
+        </section>
+
+        <section class="section section-home-clients">
+            <div class="main-heading">
+                <h1>our<br>clients</h1>
+            </div>
+
+            <div class="clients-container">
+                <figure class="clients-img">
+                    <img src="/images/main/client-logos.png" alt="">
+                </figure>
+            </div>
+        </section>
+
+        <section class="section section-home-contact">
+            <div class="chat-image-container">
+                <figure class="chat-image">
+                    <img src="/images/main/topbtm-seed.png" alt="">
+                </figure>
+            </div>
+            <div class="main-heading">
+                <h1>let's<br>have a<br>chat</h1>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="footer-contents">
+                <figure class="footer-img">
+                    <img src="/images/main/logo-large.png" alt="">
+                </figure>
+                <p class="footer-copy">superseed limited all rights reserved.</p>
+            </div>
+        </footer>
     </div>
 
     <script
