--- a/views/home.html
+++ b/views/home.html
@@ -10,20 +10,25 @@
 <body>
 
     <div class="wrapper">
-        <section class="section section-home-main">
-            <div class="sideBar yellowBg"></div>
-            <div class="seeds-container"></div>
+        <section class="section section-home-main section-flex">
+            <div class="mainContainer">
+                <div class="logo-container">
+                    <figure class="logo-image">
+                        <img src="/images/main/logo-large.png" alt="">
+                    </figure>
+                </div>
+
+                <h1>planting seeds of innovation</h1>
+            </div>
         </section>
 
-        <section class="section section-home-about">
-            <div class="sideBar yellowBg">
+        <section class="section section-home-about section-flex">
+            <div class="mainContainer splitSection">
                 <div class="main-heading">
                     <h1>who<br>we<br>are</h1>
                 </div>
-            </div>
 
-            <div class="mainContainer">
-                <div class="about-container">
+                <div class="main-words">
                     <div class="section-words">
                         <h1>Who</h1>
                         <p>Specializing in the whole spectrum of branding, we help our clients with existing or new brands build strategic plans, conceptualize and establish an impactful visual identity that reflects the brand's heart and soul. Our projects cover a large variety of industries, some of which include real estate property management / developers, fashion, pharmaceuticals, jewelry showcase designs, co-working spaces, retail sourcing agencies and more.</p>
@@ -38,35 +43,20 @@
         </section>
 
         <section class="section section-home-clients">
-            <div class="sideBar orangeBg">
-                <div class="main-heading">
-                    <h1>our<br>clients</h1>
-                </div>
-            </div>
-
-            <div class="mainContainer yellowBg">
-                <div class="clients-container">
-                    <figure class="clients-img">
-                        <img src="/images/main/client-logos.png" alt="">
-                    </figure>
-                </div>
-            </div>
         </section>
 
-        <section class="section section-home-contact">
-            <div class="sideBar yellowBg">
+        <section class="section section-home-contact section-flex">
+            <div class="mainContainer splitSection">
                 <div class="main-heading">
                     <h1>let's<br>have a<br>chat</h1>
                 </div>
-            </div>
 
-            <div class="chat-image-container">
-                <figure class="chat-image">
-                    <img src="/images/main/topbtm-seed.png" alt="">
-                </figure>
+                <div class="main-words">
+                    <div class="section-words">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quas, eos officia facere repudiandae dolore obcaecati rem cum nam, ut sed amet eaque numquam. Debitis incidunt voluptatibus fuga quibusdam error.</p>
+                    </div>
+                </div>
             </div>
-
-            <div class="mainContainer"></div>
         </section>
 
         <footer class="footer">
