Intro page basic animations done

--- a/views/home.html
+++ b/views/home.html
@@ -32,12 +32,12 @@
 
             <div class="mainContainer">
                 <div class="logo-container">
-                    <figure class="logo-image">
+                    <figure class="logo-image easingClass">
                         <img src="/images/main/logo-large.svg" alt="">
                     </figure>
                 </div>
 
-                <h1>planting seeds of innovation</h1>
+                <h1 class="splashHeading easingClass">planting seeds of innovation</h1>
             </div>
         </section>
 
