--- a/public/css/global.css
+++ b/public/css/global.css
@@ -441,6 +441,11 @@ section.section-home-main {
       .logo-image {
         max-width: 700px;
         margin: 0 auto;
+        opacity: 0;
+
+        &.animate {
+          opacity: 1;
+        }
       }
     }
 
@@ -449,6 +454,15 @@ section.section-home-main {
       color: $main-blue;
       font-weight: 100;
       font-size: 26px;
+
+      &.splashHeading {
+        transform: translateY(100px);
+        opacity: 0;
+      }
+
+      &.animate {
+        transform: translateY(0);
+      }
     }
   }
 }
